--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <link rel="stylesheet" href="src/css/index.css" media="screen" title="no title" charset="utf-8">
+        <script src="src/js/index.js" charset="utf-8"></script>
     </head>
     <body>
-        
+
     </body>
 </html>
